[gd_scene load_steps=11 format=3 uid="uid://bv7fb268l45mi"]

[ext_resource type="Script" uid="uid://jq84nvth8206" path="res://scripts/menuBackground.gd" id="1_wxjkf"]
[ext_resource type="PackedScene" uid="uid://5em58tjnm15e" path="res://scenes/objects/gravBall.tscn" id="2_2yjtc"]
[ext_resource type="Shader" uid="uid://cbbuf20qgll2k" path="res://materials/menuBlur.gdshader" id="3_xxwsn"]
[ext_resource type="Script" uid="uid://dgb2n5j4qkc2b" path="res://scripts/mainMenu.gd" id="4_lgdhf"]
[ext_resource type="StyleBox" uid="uid://d00k1mnvm3qff" path="res://assets/styles/panel.tres" id="5_k7u30"]
[ext_resource type="FontFile" uid="uid://dqplc5rd5pqih" path="res://assets/fonts/Retro Gaming.ttf" id="6_lfuba"]
[ext_resource type="PackedScene" uid="uid://r23675mm0hgs" path="res://scenes/objects/barrier.tscn" id="7_exsfm"]
[ext_resource type="PackedScene" uid="uid://cvnfet3tk2n3k" path="res://scenes/objects/menuBackgroundSpinner.tscn" id="8_m2jyg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3exl"]
shader = ExtResource("3_xxwsn")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kpumv"]
color = Color(0, 0.56, 0.168, 1)
grow_begin = -1.0
grow_end = -1.0
thickness = 6

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_wxjkf")
ball = ExtResource("2_2yjtc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="barControl" type="Node2D" parent="Camera2D"]
position = Vector2(1200, 0)

[node name="blur" type="ColorRect" parent="Camera2D"]
z_index = 3
texture_filter = 3
material = SubResource("ShaderMaterial_x3exl")
offset_left = -1008.0
offset_top = -579.0
offset_right = 960.0
offset_bottom = 261.0
scale = Vector2(1, 1.4)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -610)

[node name="menu" type="Control" parent="."]
z_index = 8
custom_minimum_size = Vector2(1920, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -360.0
offset_right = 960.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_lgdhf")

[node name="menuItems" type="Control" parent="menu"]
anchors_preset = 0
offset_left = -202.0
offset_top = -4.0
offset_right = -162.0
offset_bottom = 36.0
mouse_filter = 2

[node name="playPanel" type="Panel" parent="menu/menuItems"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 40.0
offset_right = 660.0
offset_bottom = 160.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="playButton" type="Button" parent="menu/menuItems/playPanel"]
modulate = Color(0.99, 0.99, 0.99, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 77
text = "Play"

[node name="optionsPanel" type="Panel" parent="menu/menuItems"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 200.0
offset_right = 660.0
offset_bottom = 320.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="optionsButton" type="Button" parent="menu/menuItems/optionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 55
text = "Controls"

[node name="creditsPanel" type="Panel" parent="menu/menuItems"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 360.0
offset_right = 660.0
offset_bottom = 480.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="creditsButton" type="Button" parent="menu/menuItems/creditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 66
text = "Credits"

[node name="quitPanel" type="Panel" parent="menu/menuItems"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 520.0
offset_right = 660.0
offset_bottom = 640.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="quitButton" type="Button" parent="menu/menuItems/quitPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 77
text = "Quit"

[node name="creditItems" type="Control" parent="menu"]
visible = false
z_index = -1
custom_minimum_size = Vector2(1920, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="creditBackPanel" type="Panel" parent="menu/creditItems"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -220.0
offset_right = 180.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="creditBackButton" type="Button" parent="menu/creditItems/creditBackPanel"]
modulate = Color(0.99, 0.99, 0.99, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 77
text = "Back"

[node name="creditsPanel" type="Panel" parent="menu/creditItems"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 120.0
offset_right = 280.0
offset_bottom = 400.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="credits" type="Label" parent="menu/creditItems/creditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -115.0
offset_right = 270.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 22
text = "Music: 
Eric Matyas - www.soundimage.org
Everything else:
Harry Tarrant-Barton"
horizontal_alignment = 1

[node name="optionsItems" type="Control" parent="menu"]
visible = false
z_index = -1
custom_minimum_size = Vector2(1920, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="volumePanel" type="Panel" parent="menu/optionsItems"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = -60.0
offset_right = 240.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="volumeSlider" type="HSlider" parent="menu/optionsItems/volumePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -64.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/slider = SubResource("StyleBoxLine_kpumv")
max_value = 1.0
step = 0.01
value = 0.75

[node name="Label" type="Label" parent="menu/optionsItems/volumePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.0
offset_right = 230.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 33
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="controlsPanel" type="Panel" parent="menu/optionsItems"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -205.0
offset_right = 600.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="controlsLabel" type="Label" parent="menu/optionsItems/controlsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -70.0
offset_right = 320.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 33
text = "Left Click & Drag: Sweep
Right Click & Drag: Reposition
Mousewheel whilst Repositioning to rotate
P: Pause
Escape: Quit"
horizontal_alignment = 1

[node name="optionsBackPanel" type="Panel" parent="menu/optionsItems"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("5_k7u30")

[node name="optionsBackButton" type="Button" parent="menu/optionsItems/optionsBackPanel"]
modulate = Color(0.99, 0.99, 0.99, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -55.0
offset_right = 175.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_lfuba")
theme_override_font_sizes/font_size = 77
text = "Back"

[node name="BackgroundLevel" type="Node2D" parent="."]

[node name="StaticBody2D" parent="BackgroundLevel" instance=ExtResource("7_exsfm")]
position = Vector2(-992, -422)
scale = Vector2(1, 31.814)

[node name="StaticBody2D2" parent="BackgroundLevel" instance=ExtResource("7_exsfm")]
position = Vector2(992, -436)
scale = Vector2(1, 31.974)

[node name="StaticBody2D4" parent="BackgroundLevel" instance=ExtResource("7_exsfm")]
position = Vector2(0, 572)
rotation = 1.5708
scale = Vector2(1, 31.894)

[node name="MenuBackgroundSpinner" parent="BackgroundLevel" instance=ExtResource("8_m2jyg")]
position = Vector2(-486, 164)
rotation = 1.5708
scale = Vector2(1.28, 9.92)

[node name="MenuBackgroundSpinner2" parent="BackgroundLevel" instance=ExtResource("8_m2jyg")]
position = Vector2(522, 164)
rotation = 1.5708
scale = Vector2(1.28, 9.92)
